fix: spacing between info-social-media items

--- a/style.css
+++ b/style.css
@@ -47,28 +47,33 @@ body {
   color: hsl(75, 94%, 57%);
   font-weight: 400;
   font-size: 14px;
-  margin-bottom: 16px;
+  margin-bottom: 24px;
 }
 
 .info-quote {
   color: hsl(0, 0%, 70%);
   font-size: 12px;
-  margin-bottom: 8px;
+  margin-bottom: 20px;
+}
+
+.info-social-media {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
 }
 
 .social {
   color: hsl(0, 0%, 100%);
   padding: 12px 64px;
   text-align: center;
-  margin: 0 0 10px;
   background-color: hsl(0, 0%, 30%);
   border-radius: 8px;
   font-size: 14px;
 }
 
-.social:hover{
-      color: hsl(0, 0%, 8%);
-      background-color: hsl(75, 94%, 57%);
-      cursor: pointer;
-      font-weight: bold;
+.social:hover {
+  color: hsl(0, 0%, 8%);
+  background-color: hsl(75, 94%, 57%);
+  cursor: pointer;
+  font-weight: bold;
 }
